--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>
+		My favorite color is 
+		<span class="col">coral</span>
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
