--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<p>
 		My favorite color is 
-		<span class="col">coral</span>
+		<span class="favorite-color">coral</span>
 	</p>
     <script type="text/javascript" src="./script.js">
 </script>
